--- a/index.html
+++ b/index.html
@@ -1,21 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PM-AJAY Portal - Pradhan Mantri Anusuchit Jaati Abhyuday Yojana</title>
-    <meta name="description" content="Digital platform for holistic development of Scheduled Caste communities - Pradhan Mantri Anusuchit Jaati Abhyuday Yojana (PM-AJAY)" />
+    <title>
+      PM-AJAY Portal - Pradhan Mantri Anusuchit Jaati Abhyuday Yojana
+    </title>
+    <meta
+      name="description"
+      content="Digital platform for holistic development of Scheduled Caste communities - Pradhan Mantri Anusuchit Jaati Abhyuday Yojana (PM-AJAY)"
+    />
     <meta name="author" content="Government of India" />
-    <meta name="keywords" content="PM-AJAY, Scheduled Caste, SC development, education, livelihood, government scheme, India" />
+    <meta
+      name="keywords"
+      content="PM-AJAY, Scheduled Caste, SC development, education, livelihood, government scheme, India"
+    />
 
-    <meta property="og:title" content="PM-AJAY Portal - SC Community Development" />
-    <meta property="og:description" content="Holistic development initiative for Scheduled Caste communities through education, infrastructure, and livelihood support" />
+    <meta
+      property="og:title"
+      content="PM-AJAY Portal - SC Community Development"
+    />
+    <meta
+      property="og:description"
+      content="Holistic development initiative for Scheduled Caste communities through education, infrastructure, and livelihood support"
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="PM-AJAY Portal - SC Community Development" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta
+      name="twitter:title"
+      content="PM-AJAY Portal - SC Community Development"
+    />
   </head>
 
   <body>
